tests/ui/mod-subitem-as-enum-variant.stderr
error[E0109]: type arguments are not allowed on module `Mod`
  --> $DIR/mod-subitem-as-enum-variant.rs:7:11
   |
LL |     Mod::<i32>::FakeVariant(0);
   |     ---   ^^^ type argument not allowed
   |     |
   |     not allowed on module `Mod`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0109`.
